[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
#reqwest = { git = "https://github.com/seanmonstar/reqwest" }
env_logger = "0"
log = "0"
tokio = { version = "1", features = ["full"] }
error-stack = "0.3.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
bytes = "1.3.0"
