[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
#reqwest = { git = "https://github.com/seanmonstar/reqwest" }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
error-stack = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
